feat: use turso db

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DB_NAME='YOUR_DB_NAME'
 DB_USERNAME=''
 DB_PASSWORD='pscale_pw_'
 
+
+TURSO_CONNECTION_URL=
+TURSO_AUTH_TOKEN=
 # You can generate the secret via 'openssl rand -base64 32' on Unix
 # @see https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET='supersecret'
