--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,15 +16,17 @@
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "push": "pnpm with-env drizzle-kit push:mysql --config src/config.ts",
+    "generate": "pnpm with-env drizzle-kit generate:sqlite --config src/config.ts",
+    "push": "pnpm with-env drizzle-kit push:sqlite --config src/config.ts",
     "studio": "pnpm with-env drizzle-kit studio --config src/config.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.0",
     "@planetscale/database": "^1.16.0",
     "@t3-oss/env-core": "^0.9.2",
-    "drizzle-orm": "^0.30.4",
+    "drizzle-orm": "^0.30.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
