--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "11.0.0-next.320",
     "@trpc/server": "11.0.0-next.320",
     "geist": "^1.3.0",
+    "lucide-react": "^0.367.0",
     "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
