feat: domain add actions

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
+    "./auto-form": "./src/auto-form/index.tsx",
     "./*": "./src/*.tsx"
   },
   "license": "MIT",
